# heratBeat-Linux

./: CMakeLists.txt  README.md  pkgconfig.sh
file/: outdoor_90bpm_rppg=0_facedet=2_min=5_max=5_ds=1_bpmAll.csv  outdoor_90bpm_rppg=0_facedet=2_min=5_max=5_ds=1_meanbpm.csv
include/: FaceDetect.h  RPPG.hpp  js_utils.h  mtcnn.h  network.h
src/: FaceDetect.cpp  Heartbeat.cpp  RPPG.cpp  js_utils.cpp  mtcnn.cpp  network.cpp  opencv.cpp
test/: CMakeCache.txt  HeartBeat  build.ninja  cmake_install.cmake  outdoor_90bpm_rppg=0_facedet=2_min=5_max=5_ds=1_bpmAll.csv  outdoor_90bpm_rppg=0_facedet=2_min=5_max=5_ds=1_meanbpm.csv  rules.ninja
